Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52715

Copy Image from QtWebEngine based browser does not copy proper data to clipboard

    XMLWordPrintable

Details

    • 783db9da6962c331b126f0d2262a0c0600cf46ff

    Description

      When copying an image in a browser using QtWebEngine, the clipboard data generated is not proper and cannot be pasted to i.e. Microsoft Paint. When viewing clipboard data with a spy-tool, the copied image data differs a lot from data that is copied from i.e. Chrome browser, even when the image is precisely same from the same page. The Spy-tool also cannot show preview of the image, since the data is not there / is not correct.

      Steps to reproduce:

      • Run qtwebenginewidgets demobrowser (or cookiebrowser) example
      • Go to any page that has image
      • Right click -> Copy Image
      • Open Microsoft Paint
      • Try to paste image

      Expected result:

      • Image is pasted

      Observed result:

      • Paint throws error message: "The information on the Clipboard can't be inserted into Paint."

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-52715
          # Subject Branch Project Status CR V

          Activity

            People

              jbornema Joerg Bornemann
              jussi_witick Jussi Witick
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes