Fix copying images to clipboard

The SkBitmap to QImage conversion in ClipboardQt::WriteBitmap was
hardcoding the image format to ARGB32. This failed whenever the format
of the SkBitmap provided by Chromium was different.

This change backports 1cf9175e from 5.7.

Task-number: QTBUG-52715
Change-Id: Icf27b97bc421a2201c307a4514928dcf384d9ba6
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>